--- a/Home work/lesson 8/homework_8.html
+++ b/Home work/lesson 8/homework_8.html
@@ -15,8 +15,9 @@
         <p>Экран (6.59", LTPS, 2340x1080)/ HiSilicon Kirin 710F (4x2.2 ГГц + 4x1.7 ГГц)</p>
         <p>Две основные камеры: 16 Мп + 2 Мп, фронтальная камера: 16 Мп/64 ГБ встроенной памяти</p>
         <p>microSD (до 512 ГБ)/ 3G/ LTE/ GPS/ GLONASS/ поддержка 2х SIM-карт (Nano-SIM)/ Android 9.0 (Pie)/ 4000 мА*ч</p>
-        <h2>Скидка</h2>
-        <h3>Новая цена: 4999&#8372  </h3>
+        <h2>Цвет : Green</h2>
+        <h3>Скидка</h3>
+        <p><b>Новая цена: 4999&#8372</b>gi</p>
         <p>Старая цена:<font color="red"><del>  6499&#8372</del></font></p>
         <p><b>Общие характеристики</b><a href="sources/Tech.pdf" target="_blank"><img src="sources/smartphone.png" alt="Общие характеристики"></a></p>
     </div>
@@ -52,6 +53,7 @@
     </div>
 
     <div align="center">
+        <h2>Видеообзор</h2>
         <p><iframe width="560" height="315" src="https://www.youtube.com/embed/LyjrAPZjT5E" frameborder="0" allow="accelerometer; autoplay; clipboard-write;        encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 
         <p><iframe width="560" height="315" src="https://www.youtube.com/embed/IM0i0PBzyBg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
