--- a/Home work/lesson 9/homework_9.html
+++ b/Home work/lesson 9/homework_9.html
@@ -2,9 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>homework9</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-$END$
+<h1 align="center">Кроссоверы 2020</h1>
+<div align="center">
+    <div class="red_color boxing">
+        <h2>и’Kona стиля от Hyundai</h2>
+        <img src="images/kona-front-550x343.webp" alt="hyundai kona">
+        <p>В сентябре 2020-го корейцы представили модернизированный кроссовер, которому «освежили»            экстерьер и интерьер, немного «перетряхнули» моторную гамму, а также отделили новых опций, не         доступных прежде.</p>
+    </div>
+
+    <div class="green_color boxing">
+        <h2>ЭлектроКроссКупе Audi e-tron</h2>
+        <img src="images/etron-550x343.webp" alt="audi etron">
+        <p>Audi e-tron – полноприводный премиум-SUV полноразмерной категории с полностью электрической        силовой установкой, который, в первую очередь, ориентирован на обеспеченных людей, идущих в           ногу со временем и ценящих ходовые характеристики автомобиля, но при этом уделяющих пристальное       внимание экологии.</p>
+    </div>
+
+    <div class="boxing">
+        <h2>ЭлектроКроссКупе Nissan Ariya</h2>
+        <img src="images/ariya-front-550x343.webp" alt="nissan ariya">
+        <p>Nissan Ariya – передне- или полноприводный электрический купе-кроссовер C-класса (по европейским меркам)         «со спортивным уклоном», который сам японский автопроизводитель называет не иначе как «новой главой для             бренда»… Он может похвастать эффектным дизайном, современным салоном, а также прогрессивной технологической и       технической составляющей.</p>
+    </div>
+</div>
 </body>
 </html>
