--- a/Homework16/1.html
+++ b/Homework16/1.html
@@ -5,29 +5,35 @@
     <title>1</title>
 </head>
 <style>
+    .box{
+        width: 1400px;
+        margin: 0 auto;
+        border: 1px dotted black;
+    }
     .box h2{
-        margin: 20px;
+        margin: 40px 20px;
+        font-size: 50px;
     }
     h2.shad_1{
-        text-shadow: 12px 18px gray;
+        text-shadow: 25px 35px gray;
     }
     h2.shad_2{
-        text-shadow: 12px 18px 2px gray;
+        text-shadow: 25px 35px 2px gray;
     }
     h2.shad_3{
-        text-shadow: 7px 7px 2px red, -6px -6px 2px blue;
+        text-shadow: 15px 15px 5px red, -15px -15px 5px blue;
     }
     h2.shad_4{
         color: rgb(213, 194, 146);
-        text-shadow: 1px 0px 1px rgba(0, 0, 0, 1);
+        text-shadow: 2px 0 2px rgba(0, 0, 0, 1);
     }
     h2.shad_5{
         color: rgb(213, 194, 146);
-        text-shadow: 0 1px 1px rgba(0, 0, 0, 1);
+        text-shadow: 0 2px 2px rgba(0, 0, 0, 1);
     }
     h2.shad_6{
         color: rgb(213, 194, 146);
-        text-shadow: -0.5px 0 black, 0 0.5px black, 0 -0.5px black, 0.5px 0 black;
+        text-shadow: -1px 0 black, 0 1px black, 0 -1px black, 1px 0 black;
     }
 
 </style>
