--- a/Homework16/3.html
+++ b/Homework16/3.html
@@ -5,22 +5,30 @@
     <title>3</title>
 </head>
 <style>
+    .main{
+        width: 1170px;
+        margin: 0 auto;
+        border: 1px dotted black;
+    }
     .rect{
-        width: 300px;
-        height: 150px;
+        margin: 40px;
+        width: 700px;
+        height: 350px;
         border: 1px solid black;
         background: linear-gradient(to right, red, blueviolet, blue , white 85%, red);
     }
     .rect1{
-        margin-top: 50px;
-        width: 500px;
-        height: 300px;
+        margin: 40px;
+        width: 1000px;
+        height: 450px;
         border: 1px solid black;
         background: linear-gradient(red 33%, white 33%, white 67%, red 67%);
     }
 </style>
 <body>
-<div class="rect"></div>
-<div class="rect1"></div>
+<div class="main">
+    <div class="rect"></div>
+    <div class="rect1"></div>
+</div>
 </body>
 </html>
