--- a/Homework17/catalog.html
+++ b/Homework17/catalog.html
@@ -19,7 +19,7 @@
         </header>
 
         <section class="content">
-            <div class="container">
+            <div class="container box">
                 <div id="kat"><h2>Каталог</h2></div>
                 <div class="item">
                     <div class="image"><img src="img/philips.jpg"></div>
@@ -31,7 +31,7 @@
                     <a class="btn" href="#">Подробнее</a>
                 </div>
 
-                <div class="item bord">
+                <div class="item">
                     <div class="image"><img src="img/hator.jpg"></div>
                     <h2><a href="#">Кресло для геймеров Hator Sport Light</a> </h2>
                     <div class="description"><p>3999 ₴  <span>  4 999 ₴</span></p>
@@ -58,7 +58,7 @@
                     <a class="btn" href="#">Подробнее</a>
                 </div>
 
-                <div class="item bord">
+                <div class="item">
                     <div class="image"><img src="img/philips_trim.jpg"></div>
                     <h2><a href="#">Триммер-Стайлер-Бритва Philips OneBlade</a> </h2>
                     <div class="description"><p>1499 ₴  <span>  2 999 ₴</span></p>
