--- a/Homework19/news.html
+++ b/Homework19/news.html
@@ -39,7 +39,7 @@
                                     <h3>Причина — возраст и зарплата Лионеля Месси.</h3>
                                     <div><img src="img/messi.jpg" alt="Месси"></div>
                                     <div class="text">
-                                        Лионель Месси больше не является трансферной целью Манчестер Сити — сообщает                                      Sky Sports.
+                                        Лионель Месси больше не является трансферной целью Манчестер Сити — <a href="https://www.skysports.com/football/news/11679/12139074/lionel-messi-manchester-city-will-not-try-to-sign-barcelona-forward-says-semra-hunter"         target="_blank">сообщает Sky Sports</a>.
                                          Руководство Манчестер Сити решило, что этот переход несет в себе слишком                                          большие сложности, но главной проблемой является
                                          слишком высокая зарплата 33-летнего футболиста.
                                          Манчестер Сити был главным претендентом на аргентинца, когда он собирался                                         покинуть Барселону летом 2020 года,
