--- a/project/index.html
+++ b/project/index.html
@@ -26,7 +26,7 @@
         <header class="header">
             <div class="container border-header">
                 <div class="row">
-                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-11">
+                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
                         <a href="/" class="logo"><img src="image/logo.png" alt="logo" title="logo"></a>
                     </div>
                     <div class="col-xl-8 col-lg-8 col-md-11 col-sm-12">
@@ -65,7 +65,7 @@
                             </nav>
                         </nav>
                     </div>
-                    <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1">
+                    <div class="col-xl-1 col-lg-1 col-md-1 col-sm-12">
                         <form class="form-search">
                             <input class="pole-search" type="search" name="search" placeholder="Поиск по сайту">
                             <input class="btn-search" type="submit" value="Поиск">
@@ -90,6 +90,90 @@
                         <div class="item">
                             <h2>We Are</h2>
                             <div class="text-slider">Creative</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="block2" id="block2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                        <h1>With More Than 10 Years Of Knowledge And Expertise We Design And Code Websites And Apps, We <a href="#"> Build Brands</a> And Help Them Succeed.</h1>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                        <div class="box-block2">
+                            <div class="icon-block2"><i class="fas fa-cogs"></i></div>
+                            <div class="content-block2">
+                                <div class="title-block2">User Interface</div>
+                                <div class="text-block2">
+                                    Phasellus sit amet tristique ligula. Donec iaculis leo suscipit ultricies.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                        <div class="box-block2">
+                            <div class="icon-block2"><i class="far fa-user"></i></div>
+                            <div class="content-block2">
+                                <div class="title-block2">User Experience</div>
+                                <div class="text-block2">
+                                    Phasellus sit amet tristique ligula. Donec iaculis leo suscipit ultricies.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                        <div class="box-block2">
+                            <div class="icon-block2"><i class="fas fa-tag"></i></div>
+                            <div class="content-block2">
+                                <div class="title-block2">Modern Design</div>
+                                <div class="text-block2">
+                                    Phasellus sit amet tristique ligula. Donec iaculis leo suscipit ultricies.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                        <div class="box-block2">
+                            <div class="icon-block2"><i class="far fa-life-ring"></i></div>
+                            <div class="content-block2">
+                                <div class="title-block2">Awesome Featured</div>
+                                <div class="text-block2">
+                                    Phasellus sit amet tristique ligula. Donec iaculis leo suscipit ultricies.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                        <div class="box-block2">
+                            <div class="icon-block2"><i class="fas fa-cloud-download-alt"></i></div>
+                            <div class="content-block2">
+                                <div class="title-block2">Blog Collection</div>
+                                <div class="text-block2">
+                                    Phasellus sit amet tristique ligula. Donec iaculis leo suscipit ultricies.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                        <div class="box-block2">
+                            <div class="icon-block2"><i class="far fa-comment"></i></div>
+                            <div class="content-block2">
+                                <div class="title-block2">24/7 Support</div>
+                                <div class="text-block2">
+                                    Phasellus sit amet tristique ligula. Donec iaculis leo suscipit ultricies.
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
