--- a/project/index.html
+++ b/project/index.html
@@ -105,7 +105,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
                         <div class="box-block2">
                             <div class="icon-block2"><i class="fas fa-cogs"></i></div>
                             <div class="content-block2">
@@ -117,7 +117,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
                         <div class="box-block2">
                             <div class="icon-block2"><i class="far fa-user"></i></div>
                             <div class="content-block2">
@@ -129,7 +129,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
                         <div class="box-block2">
                             <div class="icon-block2"><i class="fas fa-tag"></i></div>
                             <div class="content-block2">
@@ -141,7 +141,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
                         <div class="box-block2">
                             <div class="icon-block2"><i class="far fa-life-ring"></i></div>
                             <div class="content-block2">
@@ -153,7 +153,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
                         <div class="box-block2">
                             <div class="icon-block2"><i class="fas fa-cloud-download-alt"></i></div>
                             <div class="content-block2">
@@ -165,7 +165,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
                         <div class="box-block2">
                             <div class="icon-block2"><i class="far fa-comment"></i></div>
                             <div class="content-block2">
@@ -174,6 +174,109 @@
                                     Phasellus sit amet tristique ligula. Donec iaculis leo suscipit ultricies.
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="black-block" id="black-block">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+                        <div class="black-box">
+                            <div class="icon-black-block"><img src="image/bag.png" alt="bag"></div>
+                            <div class="num-black-box">345</div>
+                            <div class="text-black-box">completed projects</div>
+                        </div>
+                    </div>
+
+                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+                        <div class="black-box">
+                            <div class="icon-black-block"><img src="image/coffee.png" alt="coffee"></div>
+                            <div class="num-black-box">983</div>
+                            <div class="text-black-box">drinked coffee</div>
+                        </div>
+                    </div>
+
+                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+                        <div class="black-box">
+                            <div class="icon-black-block"><img src="image/pensil.png" alt="pensil"></div>
+                            <div class="num-black-box">478</div>
+                            <div class="text-black-box">mails sent</div>
+                        </div>
+                    </div>
+
+                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+                        <div class="black-box">
+                            <div class="icon-black-block"><img src="image/heart.png" alt="heart"></div>
+                            <div class="num-black-box">48</div>
+                            <div class="text-black-box">awards taken</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="creative-portfolio" id="creative-portfolio">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                        <h2 class="creative_title">Creative Portfolio</h2>
+                        <div class="creative-text">Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.</div>
+                    </div>
+                </div>
+                <div class="row">
+                        <ul class="nav nav-tabs">
+                            <li class="nav-item">
+                                <a class="nav-link active" data-toggle="tab" href="#all">All</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" data-toggle="tab" href="#design">Design</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" data-toggle="tab" href="#code">Code</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" data-toggle="tab" href="#photography">Photography</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" data-toggle="tab" href="#apps">Apps</a>
+                            </li>
+                        </ul>
+                </div>
+            </div>
+
+            <div class="tab-content">
+                <div class="tab-pane active" id="all">.1.</div>
+                <div class="tab-pane fade" id="design">.2.</div>
+                <div class="tab-pane fade" id="code">.3.</div>
+                <div class="tab-pane fade" id="photography">.4.</div>
+                <div class="tab-pane fade" id="apps">.5.</div>
+            </div>
+
+            <div class="creative-photo">
+                <div class="vert-photo">
+                    <img src="image/1.jpg" alt="1">
+                </div>
+                <div class="hor-photo">
+                    <div class="hor-photo-1">
+                        <div class="photo2">
+                            <img src="image/2.jpg" alt="2">
+                        </div>
+                        <div class="photo3">
+                            <img src="image/3.jpg" alt="3">
+                        </div>
+                    </div>
+                    <div class="hor-photo-2">
+                        <div class="photo4">
+                            <img src="image/4.jpg" alt="4">
+                        </div>
+                        <div class="photo5">
+                            <img src="image/5.jpg" alt="5">
+                        </div>
+                        <div class="photo6">
+                            <img src="image/6.jpg" alt="6">
                         </div>
                     </div>
                 </div>
