--- a/project/index.html
+++ b/project/index.html
@@ -248,35 +248,139 @@
             </div>
 
             <div class="tab-content">
-                <div class="tab-pane active" id="all">.1.</div>
+                <div class="tab-pane active" id="all">
+                    <div class="creative-photo">
+                        <div class="vert-photo for-mask">
+                            <img src="image/1.jpg" alt="1">
+                            <div class="photo-mask">
+                                <div class="mask-title">Super Awesome Work</div>
+                                <div class="mask-text">Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent sapien massa, convallis a pellentesque necestas</div>
+                                <a href="#" class="mask-btn">View More</a>
+                            </div>
+                        </div>
+                        <div class="hor-photo">
+                            <div class="hor-photo-1">
+                                <div class="photo2 for-mask">
+                                    <img src="image/2.jpg" alt="2">
+                                    <div class="photo-mask">
+                                        <div class="mask-title">Super Awesome Work</div>
+                                        <div class="mask-text">Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent sapien massa, convallis a pellentesque necestas</div>
+                                        <a href="#" class="mask-btn">View More</a>
+                                    </div>
+                                </div>
+                                <div class="photo3 for-mask">
+                                    <img src="image/3.jpg" alt="3">
+                                    <div class="photo-mask">
+                                        <div class="mask-title">Super Awesome Work</div>
+                                        <div class="mask-text">Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent sapien massa, convallis a pellentesque necestas</div>
+                                        <a href="#" class="mask-btn">View More</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="hor-photo-2">
+                                <div class="photo4 for-mask">
+                                    <img src="image/4.jpg" alt="4">
+                                    <div class="photo-mask">
+                                        <div class="mask-title">Super Awesome Work</div>
+                                        <div class="mask-text">Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent sapien massa, convallis a pellentesque necestas</div>
+                                        <a href="#" class="mask-btn">View More</a>
+                                    </div>
+                                </div>
+                                <div class="photo5 for-mask">
+                                    <img src="image/5.jpg" alt="5">
+                                    <div class="photo-mask">
+                                        <div class="mask-title">Super Awesome Work</div>
+                                        <div class="mask-text">Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent sapien massa, convallis a pellentesque necestas</div>
+                                        <a href="#" class="mask-btn">View More</a>
+                                    </div>
+                                </div>
+                                <div class="photo6 for-mask">
+                                    <img src="image/6.jpg" alt="6">
+                                    <div class="photo-mask">
+                                        <div class="mask-title">Super Awesome Work</div>
+                                        <div class="mask-text">Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent sapien massa, convallis a pellentesque necestas</div>
+                                        <a href="#" class="mask-btn">View More</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="tab-pane fade" id="design">.2.</div>
                 <div class="tab-pane fade" id="code">.3.</div>
                 <div class="tab-pane fade" id="photography">.4.</div>
                 <div class="tab-pane fade" id="apps">.5.</div>
             </div>
+        </section>
 
-            <div class="creative-photo">
-                <div class="vert-photo">
-                    <img src="image/1.jpg" alt="1">
-                </div>
-                <div class="hor-photo">
-                    <div class="hor-photo-1">
-                        <div class="photo2">
-                            <img src="image/2.jpg" alt="2">
-                        </div>
-                        <div class="photo3">
-                            <img src="image/3.jpg" alt="3">
+        <section class="creative-service">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                        <h2>Creative Service</h2>
+                        <div class="service-text">
+                            Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.
                         </div>
                     </div>
-                    <div class="hor-photo-2">
-                        <div class="photo4">
-                            <img src="image/4.jpg" alt="4">
+                </div>
+                <div class="row">
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                        <div class="red-box service-box">
+                            <div class="service-title-box">Interactive Elements</div>
+                            <div class="service-text-box">
+                                Class aptent taciti estied aliquam ellus pers piciat unde omnis dolorem dantium.
+                            </div>
+                            <a href="#" class="service-link">See Project</a>
                         </div>
-                        <div class="photo5">
-                            <img src="image/5.jpg" alt="5">
+                    </div>
+
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                        <div class="green-box service-box">
+                            <div class="service-title-box">Custom Menus</div>
+                            <div class="service-text-box">
+                                Class aptent taciti estied aliquam ellus pers piciat unde omnis dolorem dantium.
+                            </div>
+                            <a href="#" class="service-link">See Project</a>
                         </div>
-                        <div class="photo6">
-                            <img src="image/6.jpg" alt="6">
+                    </div>
+
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                        <div class="violet-box service-box">
+                            <div class="service-title-box">Animated Counters</div>
+                            <div class="service-text-box">
+                                Class aptent taciti estied aliquam ellus pers piciat unde omnis dolorem dantium.
+                            </div>
+                            <a href="#" class="service-link">See Project</a>
+                        </div>
+                    </div>
+
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                        <div class="blue-box service-box">
+                            <div class="service-title-box">Easy To Customize</div>
+                            <div class="service-text-box">
+                                Class aptent taciti estied aliquam ellus pers piciat unde omnis dolorem dantium.
+                            </div>
+                            <a href="#" class="service-link">See Project</a>
+                        </div>
+                    </div>
+
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                        <div class="yellow-box service-box">
+                            <div class="service-title-box">Online Store</div>
+                            <div class="service-text-box">
+                                Class aptent taciti estied aliquam ellus pers piciat unde omnis dolorem dantium.
+                            </div>
+                            <a href="#" class="service-link">See Project</a>
+                        </div>
+                    </div>
+
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                        <div class="lighgtblue-box service-box">
+                            <div class="service-title-box">Custom Pages</div>
+                            <div class="service-text-box">
+                                Class aptent taciti estied aliquam ellus pers piciat unde omnis dolorem dantium.
+                            </div>
+                            <a href="#" class="service-link">See Project</a>
                         </div>
                     </div>
                 </div>
